# simple_electrum_client

./: Cargo.toml
.github/workflows/: main.yml
src/: client.rs  lib.rs
src/electrum/: method.rs  mod.rs  params.rs  request.rs  response.rs  types.rs
src/raw_client/: mod.rs  ssl_client.rs  tcp_client.rs
tests/: raw_client.rs
