[package]
name = "simple_electrum_client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "electrumsc"
path = "src/bin/daemon.rs"

[[bin]]
name = "electrumsc-cli"
path = "src/bin/cli.rs"

[dependencies]
miniscript = { version = "12.2.0", features = ["serde", "base64"] }
bitcoin_slices = "0.8.0"
log = "0.4.22"
openssl = {version = "0.10.66", features = ["vendored"]}
serde = {version = "1.0.200", features = ["derive"]}
serde_json = "1.0.116"

[dev-dependencies]
hex_lit = "0.1.1"
electrsd = {version = "0.29.0", features = []}
